--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="description" content="#">
     <meta name="keywords" content="#">
     <meta name="author" content="#">
-    <link href="css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>This is my file directory</h1>
-  <ul>
-    <a href=""
+    <h1>GRA 321 Course Directory</h1>
+    <ul>
+      <a href="projects/code exercises"><li>Project 1</li></a>
+      <a href="#"><li>Project 1</li></a>
+      <a href="#"><li>Project 2</li></a>
+      <a href="#"><li>Project 3</li></a>
+    </ul>
   </body>
 </html>
