--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <h1>GRA 321 Course Directory</h1>
     <ul>
       <a href="projects/code exercises"><li>Project 1</li></a>
-      <a href="#"><li>Project 1</li></a>
-      <a href="#"><li>Project 2</li></a>
-      <a href="#"><li>Project 3</li></a>
+      <a href="projects/hello-world"><li>Project 2</li></a>
+      <a href="projects/responsive-project"><li>Project 3</li></a>
     </ul>
   </body>
 </html>
