Add description and changed css of title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>#</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="This is the course directory for GRA 321 Technology for Design I">
+    <meta name="keywords" content="Technology; Graphic Design">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
     <link href="./css/normalize.css" type="text/css" rel="stylesheet">
     <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
