--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>Course Directory | GRA 321 Technology for Design I</title>
     <meta charset="UTF-8">
     <meta name="description" content="This is the course directory for GRA 321 Technology for Design I">
     <meta name="keywords" content="Technology; Graphic Design">
@@ -13,9 +13,9 @@
   <body>
     <h1>GRA 321 Course Directory</h1>
     <ul>
-      <a href="projects/code exercises"><li>Project 1</li></a>
-      <a href="projects/hello-world"><li>Project 2</li></a>
-      <a href="projects/responsive-project"><li>Project 3</li></a>
+      <a href="projects/code-exercises"><li>Code Exercises</li></a>
+      <a href="projects/hello-world"><li>Hello World</li></a>
+      <a href="projects/responsive-project"><li>Responsive Project</li></a>
     </ul>
   </body>
 </html>
