--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <title>Hello World Project</title>
+    <meta charset= "UTF-8">
+    <meta name="discription" content="Hello World Exercise">
+    <meta name="keywords" content="School. Slack, Presentations">
+    <meta name="author" content= "Yajun 'Beatrice' Guo">
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+   <h1>Hello World!</h1>
+   <h2>Three Things I'm Looking Forward to this School Year</h2>
+
+   <ul>
+     <li>Learning Animation</li>
+     <li>Learning Coding</li>
+     <li>Training Drawing Skills</li>
+   </ul>
+
+  </body>
+</html>
+
+
+<html>
+  <head>
+    <title>Hello World Project</title>
+    <meta charset= "UTF-8">
+    <meta name="discription" content="Hello World Exercise">
+    <meta name="keywords" content="School. Slack, Presentations">
+    <meta name="author" content= "Yajun 'Beatrice' Guo">
+  </head>
+
+  <body>
+   <h1>Hello World!</h1>
+   <h2>Three Things I'm Looking Forward to this School Year</h2>
+
+   <ul>
+     <li>Learning Animation</li>
+     <li>Learning Coding</li>
+     <li>Training Drawing Skills</li>
+   </ul>
+
   </body>
 </html>
