--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <h1>GRA 321 Course Directory</h1>
     <ul>
-      <a href="gra-321/hello-world"><li>Hello World</li></a>
-      <a href="gra-321/code-exercises"><li>Code Exercises</li></a>
-      <a href="gra-321/responsive-project"><li>Responsive Project</li></a>
+      <a href="hello-world"><li>Hello World</li></a>
+      <a href="code-exercises"><li>Code Exercises</li></a>
+      <a href="responsive-project"><li>Responsive Project</li></a>
     </ul>
   </body>
 </html>
