Update index.html for exercise2

--- a/code-exercises/index.html
+++ b/code-exercises/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>GRA321 Code Exercises</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="GRA 321 Code Exercises">
+    <meta name="keywords" content="ASU,GRA321,Code Exercises">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+    <h1>GRA321 Code Exercises</h1>
+    <ul>
+      <a href="Exercise 1: Button with Hover"><li>code-exercises/exercise-1/index.html</li></a>
+      <a href="Exercise 2: Text  with Background Image"><li>code-exercises/exercise-2/index.html</li><a>
+      <a href="Exercise 3: Media Query Magic"><li>code-exercises/exercise-3/index.html</li><a>
+      <a href="Exercise 4: Magazine Translation"><li>code-exercises/exercise-4/index.html</li><a>
+    </ul>
   </body>
 </html>
+ 
