--- a/code-exercises/index.html
+++ b/code-exercises/index.html
@@ -11,11 +11,10 @@
   <body>
     <h1>GRA321 Code Exercises</h1>
     <ul>
-      <a href="Exercise 1: Button with Hover"><li>code-exercises/exercise-1/index.html</li></a>
-      <a href="Exercise 2: Text  with Background Image"><li>code-exercises/exercise-2/index.html</li><a>
-      <a href="Exercise 3: Media Query Magic"><li>code-exercises/exercise-3/index.html</li><a>
-      <a href="Exercise 4: Magazine Translation"><li>code-exercises/exercise-4/index.html</li><a>
+      <a href="exercise-1"><li>Exercise 1: Button with Hover</li></a>
+      <a href="exercise-2"><li>Exercise 2: Text with Background Image</li><a>
+      <a href="exercise-3"><li>Exercise 3: Media Query Magic</li><a>
+      <a href="exercise-4"><li>Exercise 4: Magazine Translation</li><a>
     </ul>
   </body>
 </html>
- 
