--- a/code-exercises/index.html
+++ b/code-exercises/index.html
@@ -6,10 +6,12 @@
     <meta name="description" content="GRA 321 Code Exercises">
     <meta name="keywords" content="ASU,GRA321,Code Exercises">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-    <h1>GRA321 Code Exercises</h1>
+    <h1>GRA 321 Code Exercises</h1>
     <ul>
       <a href="exercise-1"><li>Exercise 1: Button with Hover</li></a>
       <a href="exercise-2"><li>Exercise 2: Text with Background Image</li><a>
