--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>GRA 321 Code Exercise | Buttons with Hover </title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="Learn to setup the bottons on the websites">
+    <meta name="keywords" content="GRA321, Buttons Setup, Website Design">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet" >
+    <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+  <h1>Exercise 1: Buttons with Hover</h1>
+  <p> Here are my Buttons
+  <a href="https://bgsiren.github.io/gra-321/code-exercises/" target="_blank>
+    <button> Back</button></a>
+
   </body>
 </html>
