--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -11,10 +11,11 @@
   </head>
 
   <body>
-  <h1>Exercise 1: Buttons with Hover</h1>
-  <p> Here are my Buttons
-  <a href="https://bgsiren.github.io/gra-321/code-exercises/" target="_blank>
-    <button> Back</button></a>
-
+    <h1>Exercise 1: Buttons with Hover</h1>
+    <p> Here are my buttons </p>
+    <p>
+      <a href="../"><button>Back</button></a> 
+      <a href="../../"><button class="button-hover">Homepage</button></a>
+    </p>   
   </body>
 </html>
