--- a/code-exercises/exercise-4/index.html
+++ b/code-exercises/exercise-4/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>GRA 321 Code Exercise | Mockup</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="To mockup a magazine page">
+    <meta name="keywords" content="GRA321 Digital, Media Query Magic">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../css/style.css" type="text/css" rel="stylesheet''"> 
   </head>
 
   <body>
