--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GRA 321 Code Exercise | Buttons with Hover </title>
+    <title>GRA 321 Code Exercise | 1. Buttons with Hover </title>
     <meta charset="UTF-8">
     <meta name="description" content="Learn to setup the bottons on the websites">
     <meta name="keywords" content="GRA321, Buttons Setup, Website Design">
