--- a/code-exercises/exercise-2/index.html
+++ b/code-exercises/exercise-2/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>GRA 321 Code Exercise | 2. Text with Background Image</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="Learn to add image as the background">
+    <meta name="keywords" content="GRA321 Digital, Image as Background">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
+    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="../css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+  <div class="container">
+      <h2> Hello World!</h2>
+  </div>
   </body>
 </html>
