--- a/code-exercises/exercise-2/index.html
+++ b/code-exercises/exercise-2/index.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Learn to add image as the background">
     <meta name="keywords" content="GRA321 Digital, Image as Background">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="../css/style.css" type="text/css" rel="stylesheet"> 
+    <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
