--- a/code-exercises/exercise-3/index.html
+++ b/code-exercises/exercise-3/index.html
@@ -6,11 +6,12 @@
     <meta name="description" content="Add medial queries to change the elements">
     <meta name="keywords" content="GRA321 Digital, Media Query Magic">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="../css/style.css" type="text/css" rel="stylesheet''"> 
+    <link href="../css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+    <p class="media-query">Media Query Magic</p>
   </body>
 </html>
