--- a/code-exercises/exercise-1/index.html
+++ b/code-exercises/exercise-1/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Learn to setup the bottons on the websites">
     <meta name="keywords" content="GRA321, Buttons Setup, Website Design">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
     <link href="../css/normalize.css" type="text/css" rel="stylesheet" >
     <link href="../css/style.css" type="text/css" rel="stylesheet">
   </head>
