--- a/code-exercises/exercise-4/index.html
+++ b/code-exercises/exercise-4/index.html
@@ -4,13 +4,14 @@
     <title>GRA 321 Code Exercise | Mockup</title>
     <meta charset="UTF-8">
     <meta name="description" content="To mockup a magazine page">
-    <meta name="keywords" content="GRA321 Digital, Media Query Magic">
+    <meta name="keywords" content="GRA321 Digital, Website Mockup">
     <meta name="author" content="Yajun 'Beatrice' Guo">
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="../css/style.css" type="text/css" rel="stylesheet''"> 
+    <link href="../css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+    <div class="mockup">
+    </div>
   </body>
 </html>
