--- a/code-exercises/exercise-4/index.html
+++ b/code-exercises/exercise-4/index.html
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-    <div class="mockup">
-    </div>
+    <img src="../img/Mockup_Penguin.png" style="height: 1000px;"/>
   </body>
 </html>
