--- a/code-exercises/exercise-4/index.html
+++ b/code-exercises/exercise-4/index.html
@@ -6,11 +6,13 @@
     <meta name="description" content="To mockup a magazine page">
     <meta name="keywords" content="GRA321 Digital, Website Mockup">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
     <link href="../css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
-    <img src="../img/Mockup_Penguin.png" style="height: 1000px;"/>
+    <img src="../img/Website_Mockup.jpg" style="width:55%; height:55%;"> 
+    <img src="../img/Mobile1.jpg" style="width:20%; height:20%;">
   </body>
 </html>
