--- a/code-exercises/exercise-5/index.html
+++ b/code-exercises/exercise-5/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="GRA321 Digital, Magazine Layout">
     <meta name="author" content="Yajun 'Beatrice' Guo">
     <meta name="viewpoint" content="width=device-width, initialscale=1">
-    <link href="../css/normalize.css" type="text/css" rel="stylesheet">
-    <link href="../css/style.css" type="text/css" rel="stylesheet"> 
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
