--- a/code-exercises/index.html
+++ b/code-exercises/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="GRA 321 Code Exercises">
     <meta name="keywords" content="ASU,GRA321,Code Exercises">
     <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
     <link href="./css/normalize.css" type="text/css" rel="stylesheet">
     <link href="./css/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -14,9 +15,10 @@
     <h1>GRA 321 Code Exercises</h1>
     <ul>
       <a href="exercise-1"><li>Exercise 1: Button with Hover</li></a>
-      <a href="exercise-2"><li>Exercise 2: Text with Background Image</li><a>
-      <a href="exercise-3"><li>Exercise 3: Media Query Magic</li><a>
-      <a href="exercise-4"><li>Exercise 4: Magazine Translation</li><a>
+      <a href="exercise-2"><li>Exercise 2: Text with Background Image</li></a>
+      <a href="exercise-3"><li>Exercise 3: Media Query Magic</li></a>
+      <a href="exercise-4"><li>Exercise 4: Magazine Translation</li></a>
+      <a href="exercise-5"><li>Exercise 5: Magazine Layout </li><a></a>
     </ul>
   </body>
 </html>
