--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#</title>
+    <title>Charlie's Cafe|Responsive Project|GRA321</title>
     <meta charset="UTF-8">
-    <meta name="description" content="#">
-    <meta name="keywords" content="#">
-    <meta name="author" content="#">
+    <meta name="description" content="Desktop&Mobile views for Charlie's Cafe">
+    <meta name="keywords" content="GRA321 Digital, Responsive Project">
+    <meta name="author" content="Yajun 'Beatrice' Guo">
+    <meta name="viewpoint" content="width=device-width, initialscale=1">
+    <link href="./css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
   <body>
