--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -12,6 +12,111 @@
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+    <div class="Navi"> <img src="img/Logo_Name.jpg" style="width:128px; height:48px; margin-left: 26px; margin-top: 39px; margin-bottom: 50px;" />
+    </div>
+    <div class="hamburger-menu"> <button>Hamberger Menu</button>
+      </div>
+    <div class="bg-for-slideshow">
+      <div class="header-slideshow"> Header Slide Show 
+      </div>
+      <div class="about-us"> 
+      Charlie's Café, one of Sun Devil Dining’s local restaurant partners, brings the taste of Europe to ASU! 
+      Proudly serving Lavazza Italian espresso and featuring fresh European sandwiches and baked goods. 
+      Come experience the difference! 
+      </div>
+    </div>
+    <h1>SPECIALS</h1>
+    <h2>SML</h2>
+    <h3>Thai Iced Cappuccino</h3>
+    <p1>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p1>
+    <p2>4.25
+    <h3>Joyous Almond Latte</h3>
+    <p1>Imagine drinking the candy or … <br>
+      only better!! </p1>
+    <p2>4.25 4.50 5.00</p2>
+    <p3>***All specials are <br>
+      either double or triple shots***</p3>
+   <div class="bg-for-slideshow">
+     <h1>BEVERAGES</h1>
+     <h3>Cold Drinks</h3>
+     <div class="menu-items">
+      <ul>
+        <li> </li>
+        <li> Coffee </li>
+        <li> Americano </li>
+        <li> Latte </li>
+        <li> Mocha </li>
+        <li> Mocha Frappe </li>
+        <li> Chai </li>
+        <li> Thai Cappuccin </li>
+        <li> Thai Tea </li>
+        <li> Iced Tea </li>
+    </div>
+    <div class="pricing">
+      <ul>
+        <li>SML </li>
+        <li>- 2.75 - </li>
+        <li>2.00 2.50 3.00</li>
+        <li>3.55 3.90 4.75</li>
+        <li>- 4.25 5.00</li>
+        <li>3.75 4.50 5.50</li>
+        <li>- 3.95 4.25</li>
+        <li>3.25 4.25 -</li>
+        <li>- 3.50 3.00</li>
+        <li>2.00 2.50 3.00</li>
+    </div>
+    <h3>Hot Drinks</h3>
+     <div class="menu-items">
+      <ul>
+        <li> </li>
+        <li> Drip Coffee </li>
+        <li> Expresso </li>
+        <li> Macchiato </li>
+        <li> Americano </li>
+        <li> Cappuccino </li>
+        <li> Caffe Latte </li>
+        <li> Caffe Mocha </li>
+        <li> Caramel Machiato </li>
+        <li> Hot Chocolate </li>
+        <li> Chai </li>
+        <li> Organic Tea </li>
+    </div>
+    <div class="pricing">
+      <ul>
+        <li>SML </li>
+        <li>2.15 2.50 2.75 </li>
+        <li>2.15 2.75 3.35</li>
+        <li>2.35 2.85 4.75</li>
+        <li>2.00 2.50 3.25</li>
+        <li>2.95 3.50 4.25</li>
+        <li>3.55 3.95 4.75</li>
+        <li>3.70 4.25 5.00</li>
+        <li>3.95 4.40 5.05</li>
+        <li>3.25 3.75 -</li>
+        <li>3.25 3.95 -</li>
+        <li>2.50 - -</li>
+    <p3>Almond Milk 0.75<br>
+          Soymilk 0.50 </p3> 
+    </div>
+  </div>
+  <h1>SPECIALS</h1>
+  <h3>Italiano</h3>
+  <p1>Grilled baguette with prosciutto, mozzarella, sliced tomato, basil pesto and a touch of balsamic vinegar</p1>
+  <p2>9.20
+  <h3>Seville</h3>
+  <p1>Grilled baguette with Spanish chorizo, mozzarella, sliced tomato, pepperonicini, basil pesto and a touch of balsamic vinegar </p1>
+  <p2>10.00</p2>
+  <h3>Caprese</h3>
+  <p1>Grilled baguette with mozzarella, sliced tomato, fresh basil(when available), basil pesto and a touch of balsamic vinegar </p1>
+  <p2>8.75</p2>
+  <h3>Vegetarian <br>
+    Panini</h3>
+  <p1>Grilled herb focaccia with mozzarel-la, feta cheese, roasted red peppers, marinated artichoke, tomato, red on-ion, and finished with basil pesto </p1>
+  <p2>9.25</p2>
+  <h3>Mediterranean<br>
+    Chicken</h3>
+  <p1>Grilled focaccia with spiced chicken breast, mozzarella, roasted red pep-pers, sliced tomato and sundried to-mato pesto</p1>
+  <p2>11.75</p2>
+
   </body>
 </html>
