--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="hamburger-menu"> <button>Hamberger Menu</button>
       </div>
-    <div class="bg-for-slideshow">
+    <div class="bg-for-content">
       <div class="header-slideshow"> Header Slide Show 
       </div>
       <div class="about-us"> 
@@ -36,7 +36,7 @@
     <p2>4.25 4.50 5.00</p2>
     <p3>***All specials are <br>
       either double or triple shots***</p3>
-   <div class="bg-for-slideshow">
+   <div class="bg-for-content">
      <h1>BEVERAGES</h1>
      <h3>Cold Drinks</h3>
      <div class="menu-items">
@@ -118,5 +118,10 @@
   <p1>Grilled focaccia with spiced chicken breast, mozzarella, roasted red pep-pers, sliced tomato and sundried to-mato pesto</p1>
   <p2>11.75</p2>
 
+  <!--Visit US-->
+  <div class="bg-for-content">
+    <p4>Visit us at Hayden Library, Design North-Architecture, and Biodesign Each location has its own personality, find the one that suits you!</p4>
+    <div class="location-photos">
+  </div>
   </body>
 </html>
