--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <div class="Navi"> <img src="img/Logo_Name.jpg" style="width:128px; height:48px; margin-left: 26px; margin-top: 39px; margin-bottom: 50px;" />
+
+  <!--Heading-->
+    <div class="Navi"> <img src="img/Logo_Name.jpg" alt="Charlie's Cafe Logo" width=40%； margin-left=27px; margin-top=1000px; margin-bottom=50px; float=left;>
     </div>
     <div class="hamburger-menu"> <button>Hamberger Menu</button>
       </div>
@@ -25,6 +27,8 @@
       Come experience the difference! 
       </div>
     </div>
+
+<!--SPECIALS-->
     <h1>SPECIALS</h1>
     <h2>SML</h2>
     <h3>Thai Iced Cappuccino</h3>
@@ -37,7 +41,9 @@
     <p3>***All specials are <br>
       either double or triple shots***</p3>
    <div class="bg-for-content">
+<!--BEVERAGES-->
      <h1>BEVERAGES</h1>
+    <!--Cold Drinks-->
      <h3>Cold Drinks</h3>
      <div class="menu-items">
       <ul>
@@ -65,6 +71,7 @@
         <li>- 3.50 3.00</li>
         <li>2.00 2.50 3.00</li>
     </div>
+    <!--HOT DRINKS-->
     <h3>Hot Drinks</h3>
      <div class="menu-items">
       <ul>
@@ -99,29 +106,102 @@
           Soymilk 0.50 </p3> 
     </div>
   </div>
-  <h1>SPECIALS</h1>
-  <h3>Italiano</h3>
-  <p1>Grilled baguette with prosciutto, mozzarella, sliced tomato, basil pesto and a touch of balsamic vinegar</p1>
-  <p2>9.20
-  <h3>Seville</h3>
-  <p1>Grilled baguette with Spanish chorizo, mozzarella, sliced tomato, pepperonicini, basil pesto and a touch of balsamic vinegar </p1>
-  <p2>10.00</p2>
-  <h3>Caprese</h3>
-  <p1>Grilled baguette with mozzarella, sliced tomato, fresh basil(when available), basil pesto and a touch of balsamic vinegar </p1>
-  <p2>8.75</p2>
-  <h3>Vegetarian <br>
-    Panini</h3>
-  <p1>Grilled herb focaccia with mozzarel-la, feta cheese, roasted red peppers, marinated artichoke, tomato, red on-ion, and finished with basil pesto </p1>
-  <p2>9.25</p2>
-  <h3>Mediterranean<br>
-    Chicken</h3>
-  <p1>Grilled focaccia with spiced chicken breast, mozzarella, roasted red pep-pers, sliced tomato and sundried to-mato pesto</p1>
-  <p2>11.75</p2>
-
-  <!--Visit US-->
-  <div class="bg-for-content">
-    <p4>Visit us at Hayden Library, Design North-Architecture, and Biodesign Each location has its own personality, find the one that suits you!</p4>
-    <div class="location-photos">
+  
+<!--FOOD-->
+  <div>
+    <h1>FOOD</h1>
+      <h3>Italiano</h3>
+      <p1>Grilled baguette with prosciutto, mozzarella, sliced tomato, basil pesto and a touch of balsamic vinegar</p1>
+      <p2>9.20
+      <h3>Seville</h3>
+      <p1>Grilled baguette with Spanish chorizo, mozzarella, sliced tomato, pepperonicini, basil pesto and a touch of balsamic vinegar </p1>
+      <p2>10.00</p2>
+      <h3>Caprese</h3>
+      <p1>Grilled baguette with mozzarella, sliced tomato, fresh basil(when available), basil pesto and a touch of balsamic vinegar </p1>
+      <p2>8.75</p2>
+      <h3>Vegetarian <br>
+        Panini</h3>
+      <p1>Grilled herb focaccia with mozzarel-la, feta cheese, roasted red peppers, marinated artichoke, tomato, red on-ion, and finished with basil pesto </p1>
+      <p2>9.25</p2>
+      <h3>Mediterranean<br>
+        Chicken</h3>
+      <p1>Grilled focaccia with spiced chicken breast, mozzarella, roasted red pep-pers, sliced tomato and sundried to-mato pesto</p1>
+      <p2>11.75</p2>
   </div>
+
+  <!--VISIT US-->
+  <div class="bg-for-content">
+    <h1>VISIT US</h1>
+    <p4>Visit us at Hayden Library, Design North-Architecture, and Biodesign Each location has its own personality, find the one that suits you!</p4>
+    <div class="hayden-library"> <img src="./img/Hayden.jpg" style="width:265px; height: 191px; margin-left:59px; margin-top:50px;">
+      </div> 
+      <div class="intros"> Charlie’s Café Hayden Library
+        </div>
+        <div class="locaitons"> 300 E Orange St. Tempe AZ 85287
+          </div>
+        <div class="days"> Monday-Friday <br> 
+          Saturday – Sunday </br>
+          </div>
+        <div class="hours"> 07:00 – 15:00 <br>
+          Closed </br>
+          </div>
+    <div class="design-north"> <img src="./img/DesignNorth.jpg" style="width:265px; height: 191px; margin-left:59px; margin-top:50px;">
+        </div> 
+        <div class="intros"> Charlie’s Café Design North
+          </div>
+          <div class="locaitons"> 810 S Forest Mall Tempe AZ 85281
+            </div>
+          <div class="days"> Monday-Friday <br> 
+            Saturday – Sunday </br>
+            </div>
+          <div class="hours"> 07:00 – 15:00 <br>
+            Closed </br>
+            </div>    
+    <div class="bio-design"> <img src="./img/Biodesign.jpg" style="width:265px; height: 191px; margin-left:59px; margin-top:50px;">
+      </div> 
+        <div class="intros"> Charlie’s Café Biodesign
+          </div>
+        <div class="locaitons"> 3727 E Tyler St Tempe AZ 85281
+            </div>
+        <div class="days"> Monday-Friday <br> 
+            Saturday – Sunday </br>
+            </div>
+        <div class="hours"> 07:00 – 16:00 <br>
+            Closed </br>
+            </div>
+    <div class="map"> <img src="./img/map.jpg" style="width:265px; height: 169px; margin-left:59px; margin-top:50px;">
+      </div>
+  </div>
+  
+  <!--CONTACT US--> 
+  <div>
+    <h1>CONTACT US</h1>
+      <h3>E-mail Address</h3>
+      <p1>charliescafesm@outlook.com</p1>
+      <h3>Charlie’s Café Hayden Library</h3>
+      <p1>(480)727-0377</p1>
+      <h3>Charlie’s Café Design North</h3>
+      <p1>(480)727-0377</p1>
+      <h3>Charlie’s Café Biodesign</h3>
+      <p1>(480)965-3515</p1>
+  </div>  
+
+  <!--FOLLOW US--> 
+  <div>
+    <h1>FOLLOW US</h1>
+      <div class="facebookicon"> <img src="./img/FB_Logo.png" style="width:37px; height:37px;">
+      </div>
+      <p1>https://www.facebook.com/charliescafeasu/</p1>
+      <div class="facebookicon"> <img src="./img/Yelp_Logo.png" style="width:70px; height:34px;">
+      <p1>https://www.yelp.com/biz/charlie-s-café-tempe</p1>
+
+  <!--REVIEWS--> 
+  <div>
+    <h1>FOLLOW US</h1>  
+    <p4>Share your experience at Charlie’s Café and earn a chance to win a FREE DRINK!</p4>
+  </div>
+  
+  <!--Logo At The Bottom--> 
+  <div class="mustache-logo"> <img src="./img/Logo.jpg" style="width:30%; height:30%;">
   </body>
 </html>
