Updated the content

--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Desktop&Mobile views for Charlie's Cafe">
     <meta name="keywords" content="GRA321 Digital, Responsive Project">
     <meta name="author" content="Yajun 'Beatrice' Guo">
-    <meta name="viewpoint" content="width=device-width, initialscale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link href="./css/normalize.css" type="text/css" rel="stylesheet">
     <link href="./css/style.css" type="text/css" rel="stylesheet"> 
   </head>
@@ -14,7 +14,7 @@
   <body>
 
   <!--Heading-->
-    <div class="Navi"> <img src="img/Logo_Name.jpg" alt="Charlie's Cafe Logo" width=40%； margin-left=27px; margin-top=1000px; margin-bottom=50px; float=left;>
+    <div class="Navi"> <img src="img/Logo_Name.jpg" alt="Charlie's Cafe Logo" Style="width:128px; height:48px; margin-left:27px; margin-top:40px; margin-bottom:50px; float:left;">
     </div>
     <div class="hamburger-menu"> <button>Hamberger Menu</button>
       </div>
