--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Yajun 'Beatrice' Guo">
     <link rel="icon" type="image/png" href="./img/favicon_Charlie.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <link href="./css/normalize1.css" type="text/css" rel="stylesheet">
     <link href="./css/style.css" type="text/css" rel="stylesheet"> 
   </head>
 
@@ -78,12 +79,10 @@
     </div>
     <div class="about-us"> 
       Charlie's Café, one of Sun Devil Dining’s local restaurant partners, brings the taste of Europe to ASU! 
-      Proudly serving Lavazza Italian espresso and featuring fresh European sandwiches and baked goods. 
+      Proudly serving Lavazza Italian espresso and featuring fresh European sandwiches and baked goods. <br>
       Come experience the difference! 
       </div>
   </div>
-
-
 
     <script>
       function myFunction() {
@@ -97,20 +96,41 @@
     </script>
 
    </header> 
+
 <!--SPECIALS-->
-  <section id="specials">
-    <h1>SPECIALS</h1>
+
+  <section id="specials"> SPECIALS
     </section>
-    <h2>SML</h2>
-    <h3>Thai Iced Cappuccino</h3>
-    <p1>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p1>
-    <p2>4.25
-    <h3>Joyous Almond Latte</h3>
-    <p1>Imagine drinking the candy or … <br>
+  <div class="special-content">
+    <div class="size" style:> SML
+    </div>
+    <div class="items">
+      <p2>Thai Iced Cappuccino</p2>
+    </div>
+
+    <div class="details">
+      <p>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p>
+    </div>
+
+    <div class="pricing"> 
+      <p>4.25</p>
+    </div>
+    <div class="items"></div>
+      <h3>Joyous Almond Latte</h3>
+    </div>
+    <div class="Details">
+      <p1>Imagine drinking the candy or … <br>
       only better!! </p1>
-    <p2>4.25 4.50 5.00</p2>
+    </div>
+    <div class="pricing">  
+      <p2>4.25 4.50 5.00</p2>
+    </div>
+    <div class="extra">
     <p3>***All specials are <br>
       either double or triple shots***</p3>
+    </div>
+  </div>
+
    <div class="bg-for-content">
 <!--BEVERAGES-->
     <section id="beverages">
@@ -163,7 +183,7 @@
     </div>
     <div class="pricing">
       <ul>
-        <li>SML </li>
+        <p1>SML </p1>
         <li>2.15 2.50 2.75 </li>
         <li>2.15 2.75 3.35</li>
         <li>2.35 2.85 4.75</li>
