--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -102,19 +102,24 @@
   <section id="specials"> SPECIALS
     </section>
   <div class="special-content">
-    <div class="size" style:> SML
+    <div class="size-frame">
+     <div class="size" style:> 
+       <p1>SML</p1>
+      </div>
     </div>
     <div class="items">
       <p2>Thai Iced Cappuccino</p2>
     </div>
 
     <div class="details">
-      <p>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p>
+      <p3>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p3>
     </div>
 
     <div class="pricing"> 
-      <p>4.25</p>
-    </div>
+      <p3>4.25</p3>
+     </div>
+  </div>
+
     <div class="items"></div>
       <h3>Joyous Almond Latte</h3>
     </div>
