--- a/responsive-project/index.html
+++ b/responsive-project/index.html
@@ -102,23 +102,27 @@
   <section id="specials"> SPECIALS
     </section>
   <div class="special-content">
-    <div class="size-frame">
-     <div class="size" style:> 
-       <p1>SML</p1>
+      <div class="size-frame">
+      <div class="size" style:> 
+        <p1>SML</p1>
+        </div>
+      </div>
+      <div class="rows">
+        <div class="items">
+          <p2>Thai Iced Cappuccino</p2>
+        </div>
+      </div>
+      <div class="rows">
+        <div class="details">
+          <p3>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p3>
+        </div>
+      </div>
+      <div class="rows">
+        <div class="pricing"> 
+          <p3>4.25</p3>
+        </div>
       </div>
     </div>
-    <div class="items">
-      <p2>Thai Iced Cappuccino</p2>
-    </div>
-
-    <div class="details">
-      <p3>Channel your inner exotic spirit with a double shot of espresso finished with sweetened condensed milk</p3>
-    </div>
-
-    <div class="pricing"> 
-      <p3>4.25</p3>
-     </div>
-  </div>
 
     <div class="items"></div>
       <h3>Joyous Almond Latte</h3>
